@@ -26,6 +26,7 @@
 			<label index="eventlist_status">Status</label>
 			<label index="eventlist_status_canceled">canceled</label>
 			<label index="eventlist_status_confirmed">confirmed</label>
+			<label index="eventlist_button_confirm">Confirm</label>
 			<label index="speakerlist.title">Name</label>
 			<label index="speakerlist.skills">Skills</label>
 			<label index="organizerlist.title">Name</label>
@@ -80,6 +81,7 @@
 			<label index="eventlist_status">Status</label>
 			<label index="eventlist_status_canceled">abgesagt</label>
 			<label index="eventlist_status_confirmed">bestätigt</label>
+			<label index="eventlist_button_confirm">Bestätigen</label>
 			<label index="speakerlist.title">Name</label>
 			<label index="speakerlist.skills">Fähigkeiten</label>
 			<label index="organizerlist.title">Name</label>
@@ -218,6 +220,7 @@
 			<label index="eventlist_status" type="integer">247806604</label>
 			<label index="eventlist_status_canceled" type="integer">224147873</label>
 			<label index="eventlist_status_confirmed" type="integer">249197084</label>
+			<label index="eventlist_button_confirm" type="integer">118332393</label>
 			<label index="registrationlist.deleted" type="integer">244968423</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
@@ -346,6 +349,7 @@
 			<label index="eventlist_status">Status</label>
 			<label index="eventlist_status_canceled">canceled</label>
 			<label index="eventlist_status_confirmed">confirmed</label>
+			<label index="eventlist_button_confirm">Confirm</label>
 			<label index="registrationlist.deleted">(deleted)</label>
 		</languageKey>
 		<languageKey index="nl" type="array">
